[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assetts3.0/OtherUI/Equinox16Px.tres" type="DynamicFont" id=1]
[ext_resource path="res://ReusableUI/ItemIcon/ItemIcon.tscn" type="PackedScene" id=2]
[ext_resource path="res://ReusableUI/ArmsRoom/ArmsRoom.gd" type="Script" id=3]

[sub_resource type="ButtonGroup" id=1]

[node name="ArmsRoom" type="VBoxContainer"]
margin_left = 854.0
margin_right = 1274.0
margin_bottom = 756.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 420.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 1 )
text = "Arms room"
align = 1
valign = 1

[node name="Buttons" type="HBoxContainer" parent="."]
margin_top = 48.0
margin_right = 420.0
margin_bottom = 73.0

[node name="Spacer" type="Control" parent="Buttons"]
margin_bottom = 25.0

[node name="Weapons" type="Button" parent="Buttons"]
margin_left = 8.0
margin_right = 137.0
margin_bottom = 25.0
mouse_filter = 1
size_flags_horizontal = 3
toggle_mode = true
pressed = true
group = SubResource( 1 )
text = "Weapons"

[node name="Armor" type="Button" parent="Buttons"]
margin_left = 145.0
margin_right = 274.0
margin_bottom = 25.0
mouse_filter = 1
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 1 )
text = "Armor"

[node name="Equipment" type="Button" parent="Buttons"]
margin_left = 282.0
margin_right = 411.0
margin_bottom = 25.0
mouse_filter = 1
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 1 )
text = "Equip."

[node name="Spacer2" type="Control" parent="Buttons"]
margin_left = 419.0
margin_right = 419.0
margin_bottom = 25.0

[node name="Container" type="ScrollContainer" parent="."]
margin_top = 81.0
margin_right = 420.0
margin_bottom = 756.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="Panel" type="Panel" parent="Container"]
margin_right = 420.0
margin_bottom = 675.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="Container/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -420.0
margin_bottom = -663.0
custom_constants/vseparation = 19
custom_constants/hseparation = 20
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item" parent="Container/Panel/Grid" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
margin_bottom = 64.0
[connection signal="toggled" from="Buttons/Weapons" to="." method="_on_Weapons_toggled"]
[connection signal="toggled" from="Buttons/Armor" to="." method="_on_Armor_toggled"]
[connection signal="toggled" from="Buttons/Equipment" to="." method="_on_Equipment_toggled"]
